--- a/src/container/bio.hbs
+++ b/src/container/bio.hbs
@@ -1,126 +1,181 @@
-<div class="p-2">
+<div class=" row p-2">
 
-    <div>
-        <h1>{{name}}</h1>
-    </div>
+
     <section>
-        <div>
-            <em>Born:</em> {{birthdate}} </br>
-            <address>{{birthplace}}</address>
-        </div>
-        </br>
-        <div>
-            <em>Died:</em> {{deathdate}} </br>
-            <address>{{deathplace}}</address>
-        </div>
-        </br>
-        <div>
-            Nationality: {{nationality}}
-        </div>
-        </br>
-        <div>
-            Occupation: {{occupation}}
+        <div class="row">
+            <div class="card">
+                <div class="card-header">
+                    <h1>{{name}}</h1>
+                </div>
+                <div class="card-body">
+                    <div>
+                        <strong><em>Born:</em></strong> {{birthdate}}
+                        <address>{{birthplace}}</address>
+                    </div>
+
+                    <div>
+                        <strong><em>Died:</em> </strong>{{deathdate}}
+                        <address>{{deathplace}}</address>
+                    </div>
+
+                    <div>
+                        <strong> Nationality:</strong> {{nationality}}
+                    </div>
+
+                    <div>
+                        <strong> Occupation:</strong> {{occupation}}
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <hr>
     <section>
 
-        <div>
-            <h3> Known for:
-            </h3>
-            <ul>
-                {{#each known_for}}
-                <li>
-                    {{this}}
-                </li>
-                {{/each}}
-            </ul>
 
+        <div class=" col-12">
+            <div class="row g-3 ">
+                <div class="card col-3 me-3">
+                    <div class="card-header">
+                        <h3> Known for:
+                        </h3>
+                    </div>
+                    <div class="card-body">
+                        <ul>
+                            {{#each known_for}}
+                            <li>
+                                {{this}}
+                            </li>
+                            {{/each}}
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card col-3 me-3">
+                    <div class="card-header">
+                        <h3> Education: </h3>
+                    </div>
+                    <div class="card-body">
+                        {{#each education}}
+
+                        {{degree}} in {{field}}, {{institution}} in {{year}}
+
+                        {{/each}}
+
+                    </div>
+                </div>
+
+
+                <div class="card col-3 me-3">
+                    <div class="card-header">
+                        <h3>Publications: </h3>
+                        <ul>
+                    </div>
+                    <div class="card-body">
+                        {{#each notable_publications}}
+                        <li>
+                            {{title}} in {{year}} </br>
+                            <em>{{ publisher}} </em>
+                        </li>
+                        </br>
+                        {{/each}}
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
         </div>
-        <div>
-            <h3> Education: </h3>
 
-            {{#each education}}
-
-            {{degree}} in {{field}}, {{institution}} in {{year}}
-
-            {{/each}}
-
-
-        </div>
-
-        <div>
-            <h3>Publications: </h3>
-            <ul>
-                {{#each notable_publications}}
-                <li>
-                    {{title}} in {{year}} </br>
-                    <em>{{ publisher}} </em>
-                </li>
-                </br>
-                {{/each}}
-            </ul>
-        </div>
     </section>
-    <hr>
+    <hr class="mt-3 mb-3">
     <section>
-        <div>
-            <h3>Partners: </h3>
-            <ul>
-                {{#each partners}}
-                <li>
-                    {{name}} in {{years}} </br>
-                    <em>{{ relationship}} </em>
-                </li>
-                </br>
-                {{/each}}
-            </ul>
+        <div class="card">
+            <div class="card-header">
+                <h3>Partners: </h3>
+            </div>
+            <div class="card-body">
+                <ul>
+                    {{#each partners}}
+                    <li>
+                        {{name}} in {{years}}
+                        <em>{{ relationship}} </em>
+                    </li>
+
+                    {{/each}}
+                </ul>
+            </div>
         </div>
-        <hr>
+
     </section>
+    <hr class="mt-3 mb-3">
     <section>
-        <div>
-            <h3>Awards: </h3>
-            <ul>
-                {{#each awards}}
-                <li>
-                    <em>{{title}}</em> in {{year}} </br>
-                    <p>{{description}} </p>
-                </li>
-                </br>
-                {{/each}}
-            </ul>
+        <div class="card">
+            <div class="card-header">
+                <h3>Awards: </h3>
+            </div>
+            <div class="card-body">
+
+                <ul>
+                    {{#each awards}}
+                    <li>
+                        <em>{{title}}</em> in {{year}} </br>
+                        <p>{{description}} </p>
+                    </li>
+                    </br>
+                    {{/each}}
+                </ul>
+            </div>
         </div>
-        <hr>
+
     </section>
+    <hr class="mt-3 mb-3">
     <section>
-        <div>
-            <h3>Influences: </h3>
-            <ul>
-                {{#each influences}}
-                <li>
-                    <em>{{this}}</em>
-                </li>
-                </br>
-                {{/each}}
-            </ul>
+        <div class="row">
+            <div class="card col-5 ms-3">
+                <div class="card-header">
+                    <h3>Influences: </h3>
+                </div>
+                <div class="card-body">
+
+                    <ul>
+                        {{#each influences}}
+                        <li>
+                            <em>{{this}}</em>
+                        </li>
+
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
+            <div class="card col-5 ms-3">
+                <div class="card-header">
+                    <h3>Influenced: </h3>
+                </div>
+                <div class="card-body">
+
+                    <ul>
+                        {{#each influenced}}
+                        <li>
+                            <em>{{this}}</em>
+                        </li>
+
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div>
-            <h3>Influenced: </h3>
-            <ul>
-                {{#each influenced}}
-                <li>
-                    <em>{{this}}</em>
-                </li>
-                </br>
-                {{/each}}
-            </ul>
-        </div>
-        <hr>
-    </section>
-    <section>
-        <div>
+</div>
+
+</section>
+<hr class="mt-3 mb-3">
+<section>
+    <div class="card">
+        <div class="card-header">
             <h3>Quotes: </h3>
+        </div>
+        <div class="card-body">
+
+
             <ul>
                 {{#each quotes}}
                 <li>
@@ -130,33 +185,45 @@
 
                 {{/each}}
             </ul>
-            </br>
+
         </div>
-        <hr>
-    </section>
-    <section>
-        <div>
+    </div>
+
+</section>
+<hr class="mt-3 mb-3">
+<section>
+    <div class="card">
+        <div class="card-header">
             <h3>Major discoveries: </h3>
+        </div>
+        <div class="card-body">
+
             <ul>
                 {{#each major_discoveries}}
                 <li>
-                    <em>{{title}}</em> in {{year}} </br>
+                    <em>{{title}}</em> in {{year}}
                     <p>{{description}} </p>
                 </li>
-                </br>
+
                 {{/each}}
             </ul>
         </div>
-        <hr>
-    </section>
-    <section>
-        <div>
+    </div>
+
+</section>
+<hr class="mt-3 mb-3">
+<section>
+    <div class="card">
+        <div class="card-header">
             <h3>Contributions: </h3>
+        </div>
+        <div class="card-body">
+
 
             {{#with contributions}}
-            <div><em>{{title}}</em> </br></div>
+            <div><em>{{title}}</em> </div>
             </br>
-            <div>{{year}} </br></div>
+            <div>{{year}} </div>
             <div>
                 <p>{{description}} </p>
             </div>
@@ -164,6 +231,8 @@
             {{/with}}
 
         </div>
-        <hr>
-    </section>
+    </div>
+
+</section>
+<hr class="mt-3 mb-3">
 </div>
